--- a/style.css
+++ b/style.css
@@ -187,6 +187,18 @@ body {
     font-family: 'Romantic', sans-serif;
 }
 
+.gift-button{
+    padding: 15px 30px;
+    font-size: 1.2em;
+    background-color: crimson;
+    color: white;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: 'Romantic', sans-serif;
+    margin-bottom: 15px;
+}
+
 /* Corações animados */
 .hearts-container {
   position: fixed;
@@ -228,6 +240,68 @@ body {
   left: -10px;
   top: 0;
 }
+
+.ticket-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.ticket {
+      transition: 2s ease;
+      height: 0;
+      position: relative;
+      background: linear-gradient(135deg, #212529, #343a40);
+      width: 351px;
+      padding: 0;
+      border: 4px dashed #b02a37;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+      text-align: center;
+      opacity: 0;
+    }
+
+    /* Círculos nas laterais para imitar recorte */
+    .ticket::before,
+    .ticket::after {
+      content: '';
+      position: absolute;
+      width: 40px;
+      height: 40px;
+      background-color: #121212;
+      border-radius: 50%;
+      top: 50%;
+      transform: translateY(-50%);
+      z-index: 2;
+    }
+
+    .ticket::before {
+      left: -20px;
+    }
+
+    .ticket::after {
+      right: -20px;
+    }
+
+    .ticket h1 {
+      font-size: 1.6rem;
+      color: #b02a37;
+      margin: 0 0 10px;
+    }
+
+    .ticket .amount {
+      font-size: 2.8rem;
+      color: #fff;
+      font-weight: bold;
+    }
+
+    .ticket small {
+      display: block;
+      margin-top: 12px;
+      font-size: 0.9rem;
+      color: #6c757d;
+    }
 
 @keyframes fall {
   0% {
